@@ -1490,7 +1490,7 @@ fi
 
 PACKAGE=galculator
 
-VERSION=1.2.0
+VERSION=1.2.1CVS
 
 if test "`cd $srcdir && pwd`" != "`pwd`" && test -f $srcdir/config.status; then
   { { echo "$as_me:$LINENO: error: source directory already configured; run \"make distclean\" there first" >&5
