@@ -51,7 +51,7 @@ m4trace:configure.in:3: -1- AC_SUBST([ECHO_C])
 m4trace:configure.in:3: -1- AC_SUBST([ECHO_N])
 m4trace:configure.in:3: -1- AC_SUBST([ECHO_T])
 m4trace:configure.in:3: -1- AC_SUBST([LIBS])
-m4trace:configure.in:4: -1- AM_INIT_AUTOMAKE([galculator], [1.2.0])
+m4trace:configure.in:4: -1- AM_INIT_AUTOMAKE([galculator], [1.2.1CVS])
 m4trace:configure.in:4: -1- AM_AUTOMAKE_VERSION([1.4-p6])
 m4trace:configure.in:4: -1- AC_PROG_INSTALL
 m4trace:configure.in:4: -1- AC_SUBST([INSTALL_PROGRAM])
